# MoneyPrinterTurbo

./: people_1.json  people_2.json  people_3.json  pyproject.toml  query.md  requirements.txt
app/: test.md
app/config/: config.py
app/controllers/v1/: video.py
app/services/: llm.py  material.py  s3_service.py  task.py  test.md  video.py  voice.py
app/utils/: string_utils.py  utils.py
tests/: test_string_utils.py
