[tool.poetry]
name = "moneyprinterturbo"
version = "0.1.0"
description = ""
authors = ["LJlkdskdjflsa <liliangjya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.31.0,<2.32.0"
moviepy = ">=2.0.0.dev2,<2.1.0"
openai = ">=1.13.3,<1.14.0"
faster-whisper = ">=1.0.1,<1.1.0"
edge-tts = ">=6.1.10,<6.2.0"
uvicorn = ">=0.27.1,<0.28.0"
fastapi = ">=0.110.0,<0.111.0"
tomli = ">=2.0.1,<2.1.0"
streamlit = ">=1.33.0,<1.34.0"
loguru = ">=0.7.2,<0.8.0"
aiohttp = ">=3.9.3,<3.10.0"
urllib3 = ">=2.2.1,<2.3.0"
pillow = ">=10.3.0,<10.4.0"
pydantic = ">=2.6.3,<2.7.0"
g4f = ">=0.3.0.4,<0.4.0.0"
dashscope = ">=1.15.0,<1.16.0"
google-generativeai = ">=0.4.1,<0.5.0"
python-multipart = ">=0.0.9,<0.1.0"
redis = "5.0.3"
opencv-python = ">=4.9.0.80,<4.10.0.0"
azure-cognitiveservices-speech = ">=1.37.0,<1.38.0"
git-changelog = ">=2.5.2,<2.6.0"
boto3 = "^1.34.112"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
